# fsspec-scoutfs

./: .gitignore  README.md  pixi.toml  pyproject.toml
src/fsspec_scoutfs/: __init__.py  filesystem.py
tests/: test_filesystem.py
